# pic32-rs

./: LICENSE  README.md
.github/workflows/: ci.yml
examples/blinky/: 32MX150F128B_procdefs.ld  32MX270F256B_procdefs.ld  Cargo.toml  build.sh  memory.x  pic32_common.ld
examples/blinky/.cargo/: config
examples/blinky/src/: main.rs
examples/blinky_nohal/: .gitignore  32MX150F128B_procdefs.ld  32MX695F512L_procdefs.ld  Cargo.toml  build.sh
examples/blinky_nohal/.cargo/: config
examples/blinky_nohal/src/: main.rs
examples/i2c_oled_display/: Cargo.toml  README.md  build.sh
examples/i2c_oled_display/.cargo/: config
examples/i2c_oled_display/src/: main.rs
examples/usb_serial/: .gitignore  32MX270F256B_procdefs.ld  32MX274F256B_procdefs.ld  Cargo.toml  build.sh  mipsel-none.json  pic32_common.ld  rustfmt.toml
examples/usb_serial/.cargo/: config
examples/usb_serial/src/: main.rs  timer1_isr.rs
mips-mcu/: Cargo.toml  README.md  build.rs
mips-mcu-alloc/: Cargo.toml  LICENSE  README.md
mips-mcu-alloc/.cargo/: config
mips-mcu-alloc/src/: lib.rs
mips-mcu/src/: core_timer.rs  critical_section.rs  fmt.rs  interrupt.rs  lib.rs
mips-rt/: Cargo.toml  NOTICE  README.md  build.rs  link.x
mips-rt/macros/: Cargo.toml
mips-rt/macros/src/: lib.rs
mips-rt/native_lib/: Makefile  crt0.S  exception_context.S  exception_table.S  gen_isr_table.py  general-exception.S  isr_context.S  mips_irq.S
mips-rt/native_lib/include/: regdef.h
mips-rt/src/: fmt.rs  interrupt.rs  lib.rs
pic32-config-sector/: .gitignore  Cargo.toml  NOTICE  README.md  create_src.sh  pic2config.py
pic32-config-sector/src/: lib.rs  pic32mx1x4.rs  pic32mx1xx.rs  pic32mx2x4.rs  pic32mx2xx.rs  pic32mx37x.rs  pic32mx47x.rs  pic32mx567.rs  pic32mzef.rs
pic32-hal/: Cargo.toml  README.md  check_all  edc2ports.py  edc2pps.py
pic32-hal/src/: adc.rs  clock.rs  coretimer.rs  cp0timer.rs  dma.rs  gpio.rs  gpio_tables.rs  i2c.rs  int.rs  lib.rs  oc.rs  pps.rs  pps_tables.rs  spi.rs  time.rs  timer.rs  uart.rs  usb.rs
pic32-hal/src/clock/: refclock.rs
pic32-hal/src/cp0timer/: future.rs
pic32-hal/src/timer/: timer_a.rs  timer_b.rs
sysconfig/: Cargo.toml
sysconfig/src/: lib.rs
tinylog/: .gitignore  Cargo.toml  LICENSE  NOTICE
tinylog/src/: lib.rs
