[package]
name = "mips-mcu"
description = "Low level access to MIPS MCU cores"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mips", "pic32", "register", "peripheral"]
version = "0.3.1"
authors = ["Stephan <kiffie@mailbox.org>"]
repository = "https://github.com/kiffie/pic32-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0.0", optional = true }

[features]
critical-section-single-core = ["critical-section/restore-state-u32"]
