[package]
name = "pic32-hal"
version = "0.6.0"
authors = ["Stephan <kiffie@mailbox.org>"]
edition = "2018"
description = "Hardware Abstraction Layer (HAL) for PIC32 microcontrollers"
repository = "https://github.com/kiffie/pic32-rs/tree/master/pic32-hal"
keywords = ["no-std", "mips", "pic32", "hal"]
license = "MIT OR Apache-2.0"
include = ["README.md", "/src", "/build.rs"]

[features]
pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb", "device-selected"]
pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb", "device-selected"]
pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb", "device-selected"]
device-selected = []

[dependencies]
nb = "0.1.1"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
mips-mcu = "0.2.0"
mips-rt = "0.3.0"
usb-device = { version = "0.2.5", optional = true }
enumflags2 = "0.6.4"

[dependencies.pic32mx2xx]
version = "0.4.1"
features = ["rt"]

[package.metadata.docs.rs]
features = ["pic32mx2xxfxxxb"]
