[package]
name = "pic32-hal"
version = "0.12.1"
authors = ["Stephan <kiffie@mailbox.org>"]
edition = "2021"
description = "Hardware Abstraction Layer (HAL) for PIC32 microcontrollers"
documentation = "https://docs.rs/pic32-hal"
repository = "https://github.com/kiffie/pic32-rs/tree/master/pic32-hal"
keywords = ["no-std", "mips", "pic32", "hal"]
license = "MIT OR Apache-2.0"
include = ["README.md", "/src", "/build.rs"]

[features]
pic32mx1xxfxxxb = ["pic32mx2xx/pic32mx1xxfxxxb", "device-selected"]
pic32mx2xxfxxxb = ["pic32mx2xx/pic32mx2xxfxxxb", "device-selected"]
pic32mx2x4fxxxb = ["pic32mx2xx/pic32mx2x4fxxxb", "device-selected"]
pic32mx37x = ["pic32mx470/pic32mx37xfxxxl", "device-selected"]
pic32mx47x = ["pic32mx470/pic32mx47xfxxxl", "device-selected"]
device-selected = []

[dependencies]
nb = "1.1.0"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-io = "0.6.1"
mips-mcu = "0.3.0"
mips-rt = "0.3.0"
critical-section = "1.0.0"
usb-device = { version = "0.3.2", optional = true }
enumflags2 = "0.7.7"

[dependencies.pic32mx2xx]
version = "0.7.0"
features = ["rt", "critical-section"]
optional = true

[dependencies.pic32mx470]
version = "0.1.0"
features = ["rt", "critical-section"]
optional = true

[package.metadata.docs.rs]
features = ["pic32mx2xxfxxxb", "usb-device"]
