[package]
name = "blinky"
version = "0.2.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT"
edition = "2018"

[features]
pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb"]
pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
default = ["pic32mx1xxfxxxb"]

[dependencies]
mips_rt = { git = "https://github.com/kiffie/pic32-rs.git" }
embedded-hal = "0.2.3"
pic32-hal = { git = "https://github.com/kiffie/pic32-rs.git" }

[profile.release]
opt-level = 2
lto = true
