[package]
name = "blinky"
version = "0.2.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb"]
pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
rx = []
default = ["pic32mx1xxfxxxb"]

[dependencies]
mips-rt = "0.3.0"
embedded-hal = "0.2.3"
pic32-hal = "0.6.1"
pic32-config-sector = "0.1.2"
[profile.release]
opt-level = 2
lto = true
