[package]
name = "i2c_oled_display"
version = "0.3.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb"]
pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
default = ["pic32mx1xxfxxxb"]

[dependencies]
mips-rt = "0.2.0"
embedded-hal = "0.2.3"
tinylog = { git = "https://github.com/kiffie/pic32-rs.git" }
pic32-hal = "0.4.0"
ssd1306 = "0.2.6"
embedded-graphics = "0.4.9"
pic32-config-sector = "0.1.0"

[profile.release]
opt-level = 2
lto = true
