[package]
name = "usb_serial"
version = "0.3.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb"]
pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb"]
default = ["pic32mx2xxfxxxb"]

[dependencies]
mips-mcu = { version = "0.3.0", features = ["critical-section-single-core"] }
mips-rt = "0.3.6"
mips-mcu-alloc = "0.6.2"
embedded-hal = "1.0.0"
pic32-hal = { version = "0.12.1", features = ["usb-device"] }
# panic-halt = "1.0.0"
usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
usbd-serial = "0.2.2"
pic32-config-sector = "0.3.0"

log = "0.4.22"
usb-log = { path = "../../../usb-log", features = ["panic-handler"] }
critical-section = "1.2.0"
embedded_hal_02 = { package = "embedded-hal", version = "0.2.7"}

[profile.release]
opt-level = 3
lto = true
debug = true
